--- a/style.css
+++ b/style.css
@@ -1,23 +1,25 @@
 .-brand{
 
-    width: 320px;
+    width: 250px;
     height: 69px;
-    background: #4aaaa5;
+    background: rgb(255, 196, 0);
     color: #fff;
     text-align: center;
     font-family: 'Georgia', Times, Times New Roman, serif;
     line-height: 70px;
     font-weight: 700;
-    font-size: 30px;
+    font-size: 25px;
     text-decoration: none;
     float: left;
     margin-left: 10%;
+    border: 1px solid #ddd;
       
       
   }
 
 .nav2{
   float: right;
+  
   
   text-align: center;
     font-family: 'Georgia', Times, Times New Roman, serif;
@@ -78,14 +80,13 @@ clear: both
 
 }
 body{
-    background-image: url("../UpdatedPortfolio/assets/images/back1.jpg");
+    background-image: url("../UpdatedPortfolio/assets/images/codingBackground.png");
     height: 100%;
-
-  /* Center and scale the image nicely */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    
 }
 figure {
     position: relative;
@@ -94,7 +95,7 @@ figure {
 }
 
 figcaption{
-    background-color: teal;
+    background-color:rgb(101, 5, 211);
     color: #ffffff;
     height: 60px;
     width: 100%;
@@ -115,23 +116,22 @@ figcaption{
     background-color:  #4aaaa5;
     color: white;
 }
-
 .sidebar {
-  background-image: url("../../assets/images/gray_jean.png");
-  width: 100%;
-  max-width: 270px;
-  height: auto;
-  border: 1px solid #ddd;
-  padding: 30px;
-  float: right;
-}
-.connect_icons {
-  height: 60px;
-  width: 60px;
-  margin-right: 5px;
-}
-h2, h3 {
-  font-size: 22px;
-  color: black;
-  
-}
+    background-image: url("../../assets/images/gray_jean.png");
+    width: 100%;
+    max-width: 270px;
+    height: auto;
+    border: 1px solid #ddd;
+    padding: 30px;
+    float: right;
+  }
+  .connect_icons {
+    height: 60px;
+    width: 60px;
+    margin-right: 5px;
+  }
+  h2, h3 {
+    font-size: 22px;
+    color: black;
+    
+  }
